--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.6",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -25,7 +27,7 @@
     "postcss": "^8.4.12",
     "react-icons": "^4.3.1",
     "swr": "^1.2.2",
-    "tailwindcss": "^3.0.23",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.0",
     "wagmi": "^0.2.24"
   }
